sc3/admin.yaml
apiVersion: v1
kind: Pod
metadata:
  name: admin
  labels:
    app: admin
spec:
  containers:
  - name: admin
    image: ealen/echo-server:latest
    ports:
      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin
spec:
  selector:
    app: admin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
