sc3/www.yaml
apiVersion: v1
kind: Pod
metadata:
  name: www
  labels:
    app: www
spec:
  containers:
  - name: www
    image: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: www
spec:
  
  selector:
    app: www
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
